Fix student analytics colors and align course list view

--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,8 @@
 
     --radius: 1rem;
 
-    --wellness-blue: 206 35% 60%;
-    --wellness-green: 90 15% 65%;
+    --wellness-blue: 217 91% 60%;
+    --wellness-green: 142 76% 36%;
     --wellness-cream: 32 30% 93%;
     --wellness-light: 206 45% 95%;
 
